RAP-9 implemented restaurant crud
