# openapi/openapi.yaml
@@ -33,6 +33,7 @@ paths:
     get:
       tags:
         - Restaurant
+      operationId: getRestaurant
       summary: Get a restaurant by ID
       description: Returns a restaurant by ID
       parameters:
@@ -57,6 +58,7 @@ paths:
     put:
       summary: Edit a restaurant
       description: Update information for an existing restaurant.
+      operationId: updateRestaurant
       tags:
         - Restaurant
       parameters:
@@ -89,6 +91,7 @@ paths:
     delete:
       tags:
         - Restaurant
+      operationId: deleteRestaurant
       summary: Delete a restaurant
       description: Deletes a restaurant and all its locations
       parameters:
@@ -100,12 +103,10 @@ paths:
             type: integer
             minimum: 1
       responses:
-        '204':
-          description: Restaurant deleted successfully
+        '200':
+          description: Deleted
         '401':
           $ref: './components/responses/Unauthorized.yaml'
-        '404':
-          $ref: './components/responses/NotFound.yaml'
   /restaurants/{restaurantId}/locations:
     post:
       summary: Create a new location to a restaurant
